test/sema/negative/static.impala
static mut foo = 42;
static bar = foo;
static mut foobar = foo;
